<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_standard">

    <TextView
        android:id="@+id/clientUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_screen_client_user_id"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clientUserIdValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:text="-"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientUserId" />


    <TextView
        android:id="@+id/createRelationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/user_relation_create"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientUserIdValue" />


    <EditText
        android:id="@+id/create_relation_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_master_user_id"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_create_relation"
        app:layout_constraintEnd_toStartOf="@+id/btn_create_relation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRelationLabel" />


    <ImageView
        android:id="@+id/btn_create_relation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/space_xsmall"
        android:src="@android:drawable/ic_menu_send"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRelationLabel" />


    <TextView
        android:id="@+id/deleteRelationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/delete_sub_user_id"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_relation_user_id" />


    <EditText
        android:id="@+id/delete_relation_sub_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sub_user_id"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sub_user_delete_relation"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub_user_delete_relation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteRelationLabel" />

    <ImageView
        android:id="@+id/btn_sub_user_delete_relation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/space_xsmall"
        android:src="@android:drawable/ic_menu_send"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteRelationLabel" />


    <TextView
        android:id="@+id/deleteMasterRelationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/delete_master_user_id"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_relation_sub_user_id" />

    <EditText
        android:id="@+id/delete_relation_master_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_master_user_id"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_master_user_delete_relation"
        app:layout_constraintEnd_toStartOf="@+id/btn_master_user_delete_relation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteMasterRelationLabel" />

    <ImageView
        android:id="@+id/btn_master_user_delete_relation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/space_xsmall"
        android:src="@android:drawable/ic_menu_send"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteMasterRelationLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>